--- a/style.css
+++ b/style.css
@@ -1,62 +1,86 @@
-h1{
-    font-size: 45px;
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Mukta:wght@200;300;400;500;600;700;800&display=swap');
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Mukta',sans-serif;
 }
 
-p{
-    font-size: 22px;
-    color: rgb(34, 81, 81);
+/* variables */
+:root{
+    --background-color: #CAF0F8;
+    --text-color: #03055e;
+    --heading-color: #90E0EF;
+    --extra-colorone: #0077B6;
+    --extra-colortwo: #00B4D8;
 }
 
-h2{
-    color: rgb(30, 95, 97);
-    text-decoration: double;
-    font-size: 35px;
+body{
+    background-color: var(--background-color);
+    color: var(--text-color);
 }
 
-a{
-    color: seagreen;
-    text-align: center;
-    font-size: 20px;
+/* hero-section */
+
+.container{
+    height: 100vh;
 }
 
-.column {
-    float: left;
-    width: 41.33%;
-    padding: 5px;
-}
-  
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
+.header{
+    display: flex;
+    height: 15vh;
+    width: 100%;
 }
 
-li{
-    color: rgb(26, 54, 107);
-    font-size: 25px;
+.header-left{
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.topnav {
-    background-color:darkgray;
+.header-left img{
+    border-radius: 50%;
+    height: 4rem;
+    padding: 0 2rem 0 2rem;
+}
+
+.header-left p{
+    font-size: 3rem;
+    font-family: 'DM Serif Display', sans-serif;
+}
+
+.header-right{
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header-right ul{
+    display: flex;
+    list-style: none;
+}
+
+.header-right ul li{
+    margin-left: 5rem;
+    font-size: 1.5rem;
+}
+
+.slider{
+    height: 85vh;
+    background-color: var(--extra-colorone);
+    width: 800px;
+    height: 500px;
+    border-radius: 10px;
     overflow: hidden;
-  }
-  
-  .topnav a {
-    float: left;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .topnav a.active {
-    background-color: #04AA6D;
-    color: white;
-  }
+}
+
+.slides{
+    width: 500%;
+    height: 500px;
+    display: flex;
+
+}
