--- a/style.css
+++ b/style.css
@@ -69,6 +69,12 @@ body{
     font-size: 1.5rem;
 }
 
+.cont{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .slider{
     height: 85vh;
     background-color: var(--extra-colorone);
@@ -82,5 +88,53 @@ body{
     width: 500%;
     height: 500px;
     display: flex;
+}
 
+ .slides input{
+    display: none;
+}
+
+.slide{
+    width: 20%;
+}
+
+.slide img{
+    width: 800px;
+    height: 500px;
+}
+
+.navigation-manual{
+   
+}
+
+.manual-btn{
+    border: 2px solid #CAF0F8;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+
+.manual-btn:not(:last-child){
+    margin-right: 40px;
+}
+
+.manual-btn:hover{
+    background: #90E0EF;
+}
+
+#radio1:checked ~ .first{
+    margin-left: 0;
+}
+
+#radio2:checked ~ .first{
+    margin-left: -20%;
+}
+
+#radio3:checked ~ .first{
+    margin-left: -40%;
+}
+
+#radio4:checked ~ .first{
+    margin-left: -60%;
 }
